sumo/tests/marouter/errors/format/o/o_factor_false/errors.marouter
Error: Broken factor: 'a'.
Quitting (on error).
